bbb.io-kernel (1.20230710.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/control
+++ b/bbb.io-kernel/suite/trixie/debian/control
@@ -235,6 +235,15 @@ Recommends: libpruio-modules-6.4.2-bone10
 Description: BeagleBoard.org 6.4-bone for am335x
  This metapackage will install linux-image-6.4-bone for am335x in Debian.
 
+Package: bbb.io-kernel-6.5-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.5.0-rc1-bone0,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.5.0-rc1-bone0
+Description: BeagleBoard.org 6.5-bone for am335x
+ This metapackage will install linux-image-6.5-bone for am335x in Debian.
+
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
 Architecture: armhf
