--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -509,6 +509,15 @@ Recommends: libpruio-modules-6.1.35-bone20
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
+Package: bbb.io-kernel-6.5-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.5.0-rc1-bone0,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.5.0-rc1-bone0
+Description: BeagleBoard.org 6.5-bone for am335x
+ This metapackage will install linux-image-6.5-bone for am335x in Debian.
+
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
 Architecture: armhf
