bbb.io-kernel (1.20230711.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/jammy/debian/control
+++ b/bbb.io-kernel/suite/jammy/debian/control
@@ -281,18 +281,18 @@ Description: BeagleBoard.org 6.1-ti-rt for am57xx
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.184-bone73,
+Pre-Depends: linux-image-5.10.186-bone74,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.184-bone73
+Recommends: libpruio-modules-5.10.186-bone74
 Description: BeagleBoard.org 5.10-bone for am335x
  This metapackage will install linux-image-5.10-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.15-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.15.118-bone37,
+Pre-Depends: linux-image-5.15.119-bone38,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.118-bone37
+Recommends: libpruio-modules-5.15.119-bone38
 Description: BeagleBoard.org 5.15-bone for am335x
  This metapackage will install linux-image-5.15-bone for am335x in Debian.
 
@@ -326,18 +326,18 @@ Description: BeagleBoard.org 6.5-bone for am335x
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.184-bone-rt-r73,
+Pre-Depends: linux-image-5.10.186-bone-rt-r74,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.184-bone-rt-r73
+Recommends: libpruio-modules-5.10.186-bone-rt-r74
 Description: BeagleBoard.org 5.10-bone-rt for am335x
  This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
 
 Package: bbb.io-kernel-5.15-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.15.118-bone-rt-r37,
+Pre-Depends: linux-image-5.15.119-bone-rt-r38,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.118-bone-rt-r37
+Recommends: libpruio-modules-5.15.119-bone-rt-r38
 Description: BeagleBoard.org 5.15-bone-rt for am335x
  This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
 
@@ -349,3 +349,57 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.1.35-bone-rt-r20
 Description: BeagleBoard.org 6.1-bone-rt for am335x
  This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.186-armv7-x74,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.186-armv7-x74
+Description: BeagleBoard.org 5.10-armv7 for armv7
+ This metapackage will install linux-image-5.10-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-5.15-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.119-armv7-x38,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.119-armv7-x38
+Description: BeagleBoard.org 5.15-armv7 for armv7
+ This metapackage will install linux-image-5.15-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-5.10-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.186-armv7-rt-x74,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.186-armv7-rt-x74
+Description: BeagleBoard.org 5.10-armv7-rt for armv7
+ This metapackage will install linux-image-5.10-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-5.15-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.119-armv7-rt-x38,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.119-armv7-rt-x38
+Description: BeagleBoard.org 5.15-armv7-rt for armv7
+ This metapackage will install linux-image-5.15-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-5.10-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.186-armv7-lpae-x74,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.186-armv7-lpae-x74
+Description: BeagleBoard.org 5.10-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-5.10-armv7-lpae for armv7-lpae in Debian.
+
+Package: bbb.io-kernel-5.15-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.119-armv7-lpae-x38,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.119-armv7-lpae-x38
+Description: BeagleBoard.org 5.15-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-5.15-armv7-lpae for armv7-lpae in Debian.
